Closed
Bug 557987
Opened 15 years ago
Closed 15 years ago
Toolbar buttons with drop-down menus are busted
Categories
(Core :: XUL, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: fehe, Assigned: Felipe)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
1.06 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
4.65 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a5pre) Gecko/20100407 Firefox/3.6 (.NET CLR 3.5.30729)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a5pre) Gecko/20100407 Minefield/3.7a5pre
Toolbar buttons that have a drop-down menu no longer work. Only the drop-down component is accessible -- even when the button itself is clicked.
Regression range:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f292d7bd2e93&tochange=a1d1e59ac1de
Reproducible: Always
Steps to Reproduce:
1. Install "Reload Every" extension: http://reloadevery.mozdev.org/#installation
2. After restarting Minefield, notice that whenever you click the refresh button, it is only the button's drop-down menu that works.
3. Reproducible also with the following extensions:
a) Video DownloadHelper: https://addons.mozilla.org/en-US/firefox/addon/3006
b) Print Preview: https://addons.mozilla.org/en-US/firefox/addon/1778
Comment 1•15 years ago
|
||
Yes, toolbarbutton with type="menu-button"does not work properly.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 2•15 years ago
|
||
Thanks for catching that.
originalLength was to be used to check if new elements were added, not to list the local list of frames.
Attachment #437763 -
Flags: review?(roc)
Attachment #437763 -
Flags: review?(roc) → review+
We need a mochitest here to catch this regression.
Comment 4•15 years ago
|
||
(In reply to comment #3)
> We need a mochitest here to catch this regression.
I hope the fix can still land without the test being already there, though, as functionality is broken right now...
Comment 5•15 years ago
|
||
Affects the Flashblock toolbar button as well. See: <https://www.mozdev.org/bugs/show_bug.cgi?id=22698>
Updated•15 years ago
|
Yes, the fix can land as-is.
| Assignee | ||
Comment 7•15 years ago
|
||
Merged the fix here, with tests included in this patch.
For the tests, it's not possible to get anonymous nodes from elementFromPoint, so what I did is to dispatch mouseclicks on the toolbarbutton and make sure that the button and the menu dropmarker correctly receive the events. roc, does this seem reasonable for the test? I verified and it does catch the regression if the fix is not applied.
Also included in the test a check for <menulist editable="true"/> (reported as bug 558162) which is the same bug.
Attachment #437952 -
Flags: review?(roc)
Attachment #437952 -
Flags: review?(roc) → review+
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 8•15 years ago
|
||
(anyone interested feel free to land and I can watch the tree)
| Reporter | ||
Comment 11•15 years ago
|
||
Is there anyone monitoring this bug, who could land this? Thanks.
| Assignee | ||
Comment 12•15 years ago
|
||
turns out the button inside menubuttons have a rounded style on mac and dispatching a click on the edge is not ideal. I made a minor change in this version to send the click to the center.
Sent to tryserver, everything ran green.
Assignee: nobody → felipc
Attachment #437952 -
Attachment is obsolete: true
Comment 13•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
Comment 14•15 years ago
|
||
Verifying fixed using an hourly build with the cset:
http://hg.mozilla.org/mozilla-central/rev/aa360768a319
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a5pre) Gecko/20100410 Minefield/3.7a5pre ID:20100410132025
Status: RESOLVED → VERIFIED
Comment 15•15 years ago
|
||
(In reply to comment #14)
> Verifying fixed using an hourly build with the cset:
Patch seems not solve the bug in 'Modern Theme' from SM. Right-clicking on that Icons in 'Modern' don't show a menue. It always choose the default of this button.
Please set 'Status' to 'REOPENED'
| Assignee | ||
Comment 16•15 years ago
|
||
(In reply to comment #15)
> (In reply to comment #14)
> > Verifying fixed using an hourly build with the cset:
>
> Patch seems not solve the bug in 'Modern Theme' from SM. Right-clicking on that
> Icons in 'Modern' don't show a menue. It always choose the default of this
> button.
>
> Please set 'Status' to 'REOPENED'
I'm not sure that it is the same bug, since this one was tracking a specific regression. Can you file a new bug and CC me on it, and I'll help investigate. If it is indeed the same bug I'll mark it as duplicate and reopen this.
Comment 17•15 years ago
|
||
Filed Bug 562554 for the issue in Comment 16
Updated•6 years ago
|
Component: XP Toolkit/Widgets: Menus → XUL
You need to log in
before you can comment on or make changes to this bug.
Description
•