Bug 557987 - Toolbar buttons with drop-down menus are busted, r=roc@ocallahan.org