layout/xul/base/src/nsBoxFrame.cpp
@@ -2151,8 +2151,9 @@ void nsDisplayXULEventRedirector::HitTest(nsDisplayListBuilder* aBuilder,
   mList.HitTest(aBuilder, aRect, aState, &outFrames);
 
   PRInt32 originalLength = aOutFrames->Length();
+  PRInt32 localLength = outFrames.Length();
 
-  for (PRUint32 i = 0; i < originalLength; i++) {
+  for (PRUint32 i = 0; i < localLength; i++) {
 
     for (nsIContent* content = outFrames.ElementAt(i)->GetContent();
          content && content != mTargetFrame->GetContent();
